got the decision tree working successfully

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">777898155632215</string>
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
 
 </resources>
